# sshenanigans

./: .gitignore  Cargo.toml  README.md  flake.nix
examples/: basic.py
src/: lib.rs
