[package]
name = "sshenanigans"
version = "0.1.0"
edition = "2021"
authors = ["Samuel Ainsworth <skainsworth@gmail.com>"]
default-run = "sshenanigans"
license = "MIT"
description = "Build your own SSH server 🛜"
repository = "https://github.com/samuela/sshenanigans"
readme = "README.md"
categories = ["command-line-utilities", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
async-trait = "*"
clap = { version = "*", features = ["derive"] }
dashmap = "*"
futures = "*"
nix = { version = "*", features = ["user"] }

# See https://github.com/doy/pty-process/pull/8#issuecomment-1829236622.
# pty-process = { git = "https://github.com/mobusoperandi/pty-process.git", rev = "78896303a47c370e6cd5527267d8db696ffc62f1", features = ["async"] }
# See https://github.com/doy/pty-process/issues/10.
pty-process = { git = "https://github.com/samuela/pty-process.git", rev = "968c2dc6af18addce179e9396f50bac6c1ee0cca", features = ["async"] }

# We need
#  * https://github.com/warp-tech/russh/pull/231 [merged, not yet released]
#  * https://github.com/warp-tech/russh/pull/241 [merged, not yet released]
#  * https://github.com/warp-tech/russh/pull/243 [merged, not yet released]
russh = { git = "https://github.com/warp-tech/russh.git", rev = "1541fe581fe677199723da22891f7019fc54dce8" }
russh-keys = { git = "https://github.com/warp-tech/russh.git", rev = "1541fe581fe677199723da22891f7019fc54dce8" }

serde = "*"
serde_json = "*"
tokio = { version = "*" }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
uuid = { version = "*", features = ["v4"] }
