[package]
name = "sshenanigans"
version = "0.1.1"
edition = "2024"
authors = ["Samuel Ainsworth <skainsworth@gmail.com>"]
default-run = "sshenanigans"
license = "AGPL-3.0"
description = "Build your own SSH server 🛜"
repository = "https://github.com/samuela/sshenanigans"
readme = "README.md"
categories = ["command-line-utilities", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
dashmap = "6.1.0"
futures = "0.3.31"
nix = { version = "0.30.1", features = ["user"] }
pty-process = { version = "0.5.3", features = ["async"] }
russh = "0.53.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
